# The-application-of-K-Means-Clustering

./: README.md
2D-superpixels-generation-algorithm/: CMakeLists.txt
2D-superpixels-generation-algorithm/include/: SLIC.h  cmdline.h  utils.h
2D-superpixels-generation-algorithm/src/: 2D_kmeans.py  SLIC.cpp  main.cpp  stdafx.cpp  utils.cpp
3D-mesh-simplification-algorithm/: .polyscope.ini  imgui.ini  k-means.py
